Fixed help pop-up on mobile

--- a/wordle-solver/src/HelpScreen.css
+++ b/wordle-solver/src/HelpScreen.css
@@ -19,10 +19,24 @@
     border: 1px solid rgb(34, 34, 34);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     flex-direction: column;
-    max-height: 100%;
     z-index: 1001; 
     opacity: 1;
+    overflow-y: auto;
     transition: opacity 0.15s ease-out;
+}
+
+@media (width >= 500px) {
+    .help-content {
+        min-width: 350px;
+        max-height: 100%;
+    }
+}
+
+@media (width < 500px) {
+    .help-content {
+        min-width: 80%;
+        max-height: 80%;
+    }
 }
 
 .help-content.hidden {
@@ -61,4 +75,18 @@
     list-style-type: disc; /* Add this line to style the list */
     margin-left: 30px; 
     margin-right: 30px;
+}
+
+@media (width >= 500px) {
+    .help-list {
+        margin-left: 30px; 
+        margin-right: 30px;
+    }
+}
+
+@media (width < 500px) {
+    .help-list {
+        margin-left: 15px; 
+        margin-right: 15px;
+    }
 }
